--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
       <artifactId>spring-security-core</artifactId>
       <version>5.3.4.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>29.0-jre</version>
+    </dependency>
   </dependencies>
 
   <build>
